common: Check the exit status of hotplug scripts correctly

Instead of comparing the shell's exit code by hand, use
g_spawn_check_exit_status() to get the script's exit code.

https://bugzilla.gnome.org/show_bug.cgi?id=710791